fix text overflow issue

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -49,6 +49,9 @@
   text-align: center;
   margin: 0;
   padding-top: 0.5rem;
+  overflow-y: auto;
+  max-height: 130px;
+  word-break: break-word;
 }
 
 /* .card.flipping {
